--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css" />
     <style>html, body {width: 100%;height: 100%;margin: 0;padding: 0;}</style>
 
+    <title>Sea Level Rise USA</title>
+
     <link rel="stylesheet" href="fcamap.css"/>
 
     <script src="https://d3js.org/d3.v4.js"></script>
