--- a/index.html
+++ b/index.html
@@ -48,16 +48,11 @@
     <div class="attribution">© 2021 Urban Intelligence.</div>
   </div>
   <div id="help-popup">
-    <h2>Achieving X-Minute Cities</h2>
+    <h2>Direct and indirect impacts of sea-level rise on USA communities</h2>
     <p>
-      As cities rapidly urbanise and adapt to climate change, there is an increasing need to shift the design of built environments to be human-centric and easy to traverse. Introducing: The X-Minute City, where residents are within X minutes of amenities via walking and cycling. Communities with high proximity to amenities creates a vibrant and diverse city.  <br><br>
-This tool enables local government, central government, and communities to:
-<ul><li>Guide investment prioritisation in creating highly accessible cities through place making and smart amenity placement</li>
-  <li>Guide the densification and urban renaissance of towns and cities in Aotearoa </li>
-  <li>Identify neighbourhoods that are underserved by a range of amenities </li>
-  <li>Identify the inequities of city design by income, ethnicity and disability</li> 
-  <li>Adapt to and mitigate climate change through promoting active modes of transit, such as walking, cycling and using a wheelchair</li> 
-</ul></p>
+      We argue that current assessments on risk of displacement from SLR that calculate the at risk population as those directly exposed to the water do not capture the entire impact and are therefore underestimating the risk. To begin to evaluate the full population at risk of displacement we use a measure of access to common amenities and services.<br><br>
+      Access is a common metric in the urban planning and equity literature because of its ability to capture how the spatial properties of infrastructure (e.g., road design, density of development) impact people as opposed to engineering metrics which focus more on the intrinsic properties of infrastructure (e.g., topology or reliability metrics). More recently, research has suggested access as a measure for resilience because of its ability to capture the availability of opportunities which enhance qualities such as social cohesion, economic stimulus, and even recovery capacity. Access in the context of SLR provides a complementary metric to risk of displacement for measuring burden. From the most basic level, diminished accessibility is indicative of time costs stemming from longer commute times and potentially greater greenhouse gas emissions from combustion engines. A lack of accessibility altogether to key public accommodations signals opportunity loss.
+    </p>
     <br>
     <span class="contact">Have suggestions or feedback? Contact us at <a href="mailto:info@urbanintelligence.co.nz?subject=About Your WREMO Project...">info@urbanintelligence.co.nz</a></span>
     <button onclick="hideHelpPopup()">&#10006;</button>
