Updated for Washington Post

--- a/index.html
+++ b/index.html
@@ -64,12 +64,25 @@
 
   </div>
   <div id="help-popup">
-    <h2></h2>
-    <p>
+    <table style="width:100%;padding-top: 15px;border-spacing: 0;">
+      <tr style="width:100%;">
+        <td>
+          <img src="lib/UC_UM_Horizontal-180px.png" style="width: 180px;"></img>
+        </td>
+        <td style="width:100%;padding-left: 30px;">
+          <h2></h2>
+        </td>
+      </tr>
+      <tr style="width:100%;">
+        <td colspan="100%">
+          <p style="text-align: justify">
      
-    </p>
+          </p>
+        </td>
+      </tr>
+    </table>
     <br>
-    <span class="contact">Have suggestions or feedback? Contact us at <a href="mailto:info@urbanintelligence.co.nz?subject=About Your WREMO Project...">info@urbanintelligence.co.nz</a></span>
+    <span class="contact">If you would like additional information about our research, or have suggestions or feedback, contact us at <a href="mailto:info@urbanintelligence.co.nz?subject=About Your USA Sea Level Rise Project...">info@urbanintelligence.co.nz</a></span>
     <button onclick="hideHelpPopup()">&#10006;</button>
   </div>
 </body>
